test/spec_vectors/func/fail/module_21.wat
(module (type $t (func)) (func $type-local-uninitialized (local $x (ref $t)) (drop (local.get $x))))